--- a/src/app/traffic-light/traffic-light.component.css
+++ b/src/app/traffic-light/traffic-light.component.css
@@ -14,6 +14,11 @@
     cursor: pointer;
 }
 
+.btn-cross:disabled {
+    background-color: #666;
+    cursor: not-allowed;
+}
+
 .btn-cross:hover {
     background-color: #666;
 }
