disable button 10s after the accident

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
             ></app-traffic-light>
         </div>
         <div class="btn-container">
-            <button class="btn" [disabled]="isAccident" (click)="processAccident()">Авария</button>
+            <button class="btn" [disabled]="isAccident || isButtonDisabled" (click)="processAccident()">Авария</button>
         </div>
         <div class="vertical-container">
             <app-traffic-light
