--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,7 @@
 .traffic-container {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     height: 100vh;
